--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "new-talks": "cp ../talks-of-president-nelson-data/data.json ./src/data/data.json"
   },
   "browserslist": [
     ">0.2%",
